--- a/dashboard.html
+++ b/dashboard.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clinic Dashboard</title>
 
-    <!-- Favicon -->
-
     <link rel="icon" href="/img/dummy-conan.jpeg" type="image/jpeg" />
-    <!-- Or for .ico file -->
-    <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico" /> -->
 
     <link
       rel="stylesheet"
@@ -17,8 +13,15 @@
     />
     <link rel="stylesheet" href="./dashboard.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Load Supabase and Chart.js BEFORE custom JS -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"
+    ></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Load your custom dashboard logic LAST -->
+    <script defer src="./dashboard.js"></script>
   </head>
 
   <body>
@@ -28,7 +31,7 @@
         <h2><i class="fas fa-lock"></i>تسجيل دخول المسؤول</h2>
         <input type="email" id="email" placeholder="البريد الإلكتروني" />
         <input type="password" id="password" placeholder="كلمة المرور" />
-        <button onclick="login()">تسجيل الدخول</button>
+        <button id="loginBtn">تسجيل الدخول</button>
         <p id="errorMsg">بريد إلكتروني أو كلمة مرور غير صالحة</p>
       </div>
     </div>
@@ -81,13 +84,10 @@
               <input type="text" placeholder="اكتب هنا..." />
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <!--<button class="rtl-toggle" title="RTL">
-              <i class="fa-solid fa-align-right"></i>
-            </button>-->
             <button class="icon-btn" id="themeToggle">
               <i class="fa-regular fa-moon"></i>
             </button>
-            <button class="icon-btn" onclick="logout()">
+            <button class="icon-btn" id="logoutBtn">
               <i class="fa-solid fa-right-from-bracket"></i>
             </button>
           </div>
@@ -126,70 +126,21 @@
         </section>
 
         <!-- HERO CARDS -->
-        <section
-          class="hero-cards"
-          style="
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            align-items: stretch;
-            padding: 20px;
-          "
-        >
-          <div
-            class="hero-card dark"
-            style="
-              flex: 1 1 400px;
-              background-color: #1e1e1e;
-              color: #fff;
-              padding: 40px;
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-            "
-          >
+        <section class="hero-cards">
+          <div class="hero-card dark">
             <div>
-              <h3 style="margin-top: 0; font-size: 24px">
-                لوحة تحكم عيادة سمايلز
-              </h3>
-              <p style="line-height: 1.6; margin-bottom: 24px; font-size: 16px">
+              <h3>لوحة تحكم عيادة سمايلز</h3>
+              <p>
                 مرحبًا بكم في النظام الذكي لإدارة العيادة. من هنا يمكنكم متابعة
                 المواعيد، عرض أسماء الحجوزات، وإدارة سير العمل بسهولة ودقة.
               </p>
             </div>
-            <a
-              href="booking.html"
-              style="text-align: center; text-decoration: none"
-            >
-              <button
-                style="
-                  background: linear-gradient(270deg, #7c3aed, #a855f7);
-                  color: #fff;
-                  border: none;
-                  padding: 12px 24px;
-                  cursor: pointer;
-                  font-size: 16px;
-                "
-              >
-                عرض الحجوزات
-              </button>
+            <a href="booking.html">
+              <button>عرض الحجوزات</button>
             </a>
           </div>
 
-          <div
-            class="hero-card gradient"
-            style="
-              flex: 1 1 400px;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              overflow: hidden;
-              padding: 0;
-              margin: 0;
-              background-color: #f5f5f5;
-            "
-          >
+          <div class="hero-card gradient">
             <img
               src="img/rocket.jpg"
               alt="Rocket Image"
@@ -227,25 +178,11 @@
               <table id="tbl">
                 <thead>
                   <tr>
-                    <th onclick="sortTable(0)">
-                      الاسم <i class="fas fa-sort"></i>
-                    </th>
-
-                    <th onclick="sortTable(1)">
-                      الهاتف <i class="fas fa-sort"></i>
-                    </th>
-
-                    <th onclick="sortTable(2)">
-                      الخدمة <i class="fas fa-sort"></i>
-                    </th>
-
-                    <th onclick="sortTable(3)">
-                      الموعد <i class="fas fa-sort"></i>
-                    </th>
-
-                    <th onclick="sortTable(4)">
-                      الوقت <i class="fas fa-sort"></i>
-                    </th>
+                    <th>الاسم</th>
+                    <th>الهاتف</th>
+                    <th>الخدمة</th>
+                    <th>الموعد</th>
+                    <th>الوقت</th>
                   </tr>
                 </thead>
                 <tbody></tbody>
@@ -257,316 +194,5 @@
         <footer>© 2025 Smile Clinic</footer>
       </main>
     </div>
-
-    <script>
-      // ======= SUPABASE LOGIN LOGIC =======
-      const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
-      const SUPABASE_KEY =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
-      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-      async function login() {
-        const email = document.getElementById("email").value.trim();
-        const password = document.getElementById("password").value.trim();
-
-        const { data } = await supabase
-          .from("admin_auth")
-          .select("*")
-          .eq("email", email)
-          .eq("password", password)
-          .maybeSingle();
-
-        if (data) {
-          document.getElementById("loginScreen").style.display = "none";
-          document.getElementById("dashboardContent").style.display = "block";
-          localStorage.setItem("clinic_logged_in", "true");
-          load();
-        } else {
-          const msg = document.getElementById("errorMsg");
-          msg.style.display = "block";
-          msg.textContent = "بريد إلكتروني أو كلمة مرور غير صالحة";
-        }
-      }
-
-      function logout() {
-        localStorage.removeItem("clinic_logged_in");
-        document.getElementById("loginScreen").style.display = "flex";
-        document.getElementById("dashboardContent").style.display = "none";
-        document.getElementById("email").value = "";
-        document.getElementById("password").value = "";
-      }
-
-      if (localStorage.getItem("clinic_logged_in") === "true") {
-        document.getElementById("loginScreen").style.display = "none";
-        document.getElementById("dashboardContent").style.display = "block";
-      }
-
-      // ======= DASHBOARD LOGIC =======
-      let bar, pie, line;
-      let allData = [];
-      let sortDirection = 1;
-      const q = (s) => document.querySelector(s);
-      const animateNum = (el, to) => {
-        let n = 0;
-        const s = to / 40;
-        const i = setInterval(() => {
-          n += s;
-          el.textContent = Math.min(Math.round(n), to);
-          if (n >= to) clearInterval(i);
-        }, 15);
-      };
-
-      async function load() {
-        const res = await fetch("/api/bookings");
-        const rawData = await res.json();
-        // Filter out the first row (header)
-        allData = rawData.slice(1); // Skip first element
-        filterAndRender();
-      }
-
-      function filterAndRender() {
-        renderTable(allData);
-        updateStats(allData);
-        drawCharts(allData);
-      }
-
-      function renderTable(d) {
-        const tb = q("#tbl tbody");
-        tb.innerHTML = "";
-        d.forEach((b) => {
-          const r = document.createElement("tr");
-          r.innerHTML = `<td>${b.name || "-"}</td><td>${
-            b.phone || "-"
-          }</td><td>${b.service || "-"}</td><td>${
-            b.appointment || "-"
-          }</td><td>${
-            b.timestamp ? new Date(b.timestamp).toLocaleString() : "-"
-          }</td>`;
-          tb.appendChild(r);
-        });
-      }
-
-      function updateStats(d) {
-        animateNum(q("#total"), d.length);
-        const today = new Date().toISOString().split("T")[0];
-        const todayCount = d.filter((b) =>
-          b.timestamp?.startsWith(today)
-        ).length;
-        animateNum(q("#today"), todayCount);
-
-        const sc = {};
-        d.forEach(
-          (b) => b.service && (sc[b.service] = (sc[b.service] || 0) + 1)
-        );
-        const top = Object.entries(sc).sort((a, b) => b[1] - a[1])[0];
-        q("#popular").textContent = top ? top[0] : "N/A";
-
-        const revenue = todayCount * 75;
-        q("#revenue").textContent = "$" + revenue;
-      }
-
-      function drawCharts(d) {
-        const sc = {};
-        d.forEach((b) => (sc[b.service] = (sc[b.service] || 0) + 1));
-        const labels = Object.keys(sc);
-        const vals = Object.values(sc);
-
-        if (bar) bar.destroy();
-        if (pie) pie.destroy();
-        if (line) line.destroy();
-
-        bar = new Chart(q("#bar"), {
-          type: "bar",
-          data: {
-            labels,
-            datasets: [
-              {
-                data: vals,
-                backgroundColor: "rgba(217, 70, 239, 0.8)",
-                borderRadius: 8,
-                borderWidth: 0,
-              },
-            ],
-          },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-              legend: { display: false },
-            },
-            scales: {
-              y: {
-                beginAtZero: true,
-                grid: {
-                  color: "rgba(0,0,0,0.05)",
-                },
-              },
-              x: {
-                grid: { display: false },
-              },
-            },
-          },
-        });
-
-        pie = new Chart(q("#pie"), {
-          type: "doughnut",
-          data: {
-            labels,
-            datasets: [
-              {
-                data: vals,
-                backgroundColor: [
-                  "#d946ef",
-                  "#a855f7",
-                  "#ec4899",
-                  "#f97316",
-                  "#3b82f6",
-                ],
-                borderWidth: 0,
-              },
-            ],
-          },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-              legend: {
-                position: "bottom",
-                labels: {
-                  usePointStyle: true,
-                  padding: 20,
-                  font: {
-                    family: "'Cairo', sans-serif",
-                  },
-                },
-              },
-            },
-            cutout: "70%",
-          },
-        });
-
-        const weekData = getWeeklyData(d);
-        line = new Chart(q("#line"), {
-          type: "line",
-          data: {
-            labels: weekData.labels,
-            datasets: [
-              {
-                label: "الحجوزات",
-                data: weekData.values,
-                borderColor: "#d946ef",
-                backgroundColor: "rgba(217, 70, 239, 0.1)",
-                fill: true,
-                tension: 0.4,
-                borderWidth: 3,
-                pointRadius: 5,
-                pointBackgroundColor: "#d946ef",
-              },
-            ],
-          },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            plugins: {
-              legend: { display: false },
-            },
-            scales: {
-              y: {
-                beginAtZero: true,
-                grid: {
-                  color: "rgba(0,0,0,0.05)",
-                },
-              },
-              x: {
-                grid: { display: false },
-              },
-            },
-          },
-        });
-      }
-
-      function getWeeklyData(d) {
-        const days = [
-          "الأحد",
-          "الاثنين",
-          "الثلاثاء",
-          "الأربعاء",
-          "الخميس",
-          "الجمعة",
-          "السبت",
-        ];
-        const counts = [0, 0, 0, 0, 0, 0, 0];
-        d.forEach((b) => {
-          if (b.timestamp) {
-            const day = new Date(b.timestamp).getDay();
-            counts[day]++;
-          }
-        });
-        return { labels: days, values: counts };
-      }
-
-      function sortTable(col) {
-        const tb = q("#tbl tbody");
-        const rows = Array.from(tb.rows);
-        rows.sort(
-          (a, b) =>
-            sortDirection *
-            a.cells[col].textContent.localeCompare(b.cells[col].textContent)
-        );
-        sortDirection *= -1;
-        tb.innerHTML = "";
-        rows.forEach((r) => tb.appendChild(r));
-      }
-
-      // Theme toggle
-      const themeToggle = document.getElementById("themeToggle");
-      themeToggle.addEventListener("click", function () {
-        document.body.classList.toggle("dark");
-        const icon = themeToggle.querySelector("i");
-        if (document.body.classList.contains("dark")) {
-          icon.classList.remove("fa-moon");
-          icon.classList.add("fa-sun");
-          localStorage.setItem("clinic_theme", "dark");
-        } else {
-          icon.classList.remove("fa-sun");
-          icon.classList.add("fa-moon");
-          localStorage.setItem("clinic_theme", "light");
-        }
-      });
-
-      // Check for saved theme preference
-      if (localStorage.getItem("clinic_theme") === "dark") {
-        document.body.classList.add("dark");
-        const icon = themeToggle.querySelector("i");
-        icon.classList.remove("fa-moon");
-        icon.classList.add("fa-sun");
-      }
-
-      // Sidebar toggle
-      const menuToggle = document.getElementById("menuToggle");
-      const sidebar = document.getElementById("sidebar");
-      menuToggle.addEventListener("click", () => {
-        sidebar.classList.toggle("active");
-      });
-
-      // Close sidebar when clicking outside on mobile
-      document.addEventListener("click", (e) => {
-        if (
-          window.innerWidth <= 768 &&
-          sidebar.classList.contains("active") &&
-          !sidebar.contains(e.target) &&
-          e.target !== menuToggle &&
-          !menuToggle.contains(e.target)
-        ) {
-          sidebar.classList.remove("active");
-        }
-      });
-
-      // Auto-refresh if logged in
-      if (localStorage.getItem("clinic_logged_in") === "true") {
-        load();
-        setInterval(load, 15000);
-      }
-    </script>
   </body>
 </html>
