--- a/dashboard.html
+++ b/dashboard.html
@@ -187,11 +187,24 @@
             </div>
           </div>
 
-          <div class="card">
-            <h3>الاتجاه الأسبوعي</h3>
-            <div class="chart-container">
-              <canvas id="line"></canvas>
-            </div>
+          <div
+            class="hero-card gradient"
+            style="
+              flex: 1 1 400px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              overflow: hidden;
+              padding: 0;
+              margin: 0;
+              background-color: #f5f5f5;
+            "
+          >
+            <img
+              src="img/rocket.jpg"
+              alt="Rocket Image"
+              style="width: 100%; height: 100%; object-fit: cover"
+            />
           </div>
 
           <div class="card">
