--- a/dashboard.html
+++ b/dashboard.html
@@ -194,7 +194,7 @@
             "
           >
             <img
-              src="img/rocket.jpg"
+              src="img/rocket2.jpg"
               alt="Rocket Image"
               style="width: 100%; height: 100%; object-fit: cover"
             />
