--- a/analytics.html
+++ b/analytics.html
@@ -33,7 +33,7 @@
             لوحة القيادة
           </a>
 
-          <a href="#">
+          <a href="notifications.html">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
           </a>
@@ -115,8 +115,9 @@
 
       async function load() {
         const res = await fetch("/api/bookings");
-        allData = await res.json();
-        drawCharts(allData);
+        const rawData = await res.json();
+        allData = rawData.slice(1);
+        filterAndRender();
       }
 
       function drawCharts(d) {
